--- a/project.html
+++ b/project.html
@@ -14,12 +14,24 @@
         <h1>My Project</h1>
         <p>A Growing Problem</p>
     </div>
+    <div class="navbar">
+        <button id="previousButton" onclick="previous(this)" disabled = true>Previous</button>
+        <button id="nextButton" onclick="next(this)">Next</button>
+    </div>
     <div class="row">
-        <div class="side">
+        <div class="side" id="s0">
             <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, labore nam hic perspiciatis tempora
                 autem
                 ipsam odit voluptatibus molestias corporis unde, cumque quos iusto saepe ab, velit repellendus alias
                 eius.
+            </P>
+        </div>
+        <div class="side" id="s1">
+            <P>Quis nesciunt voluptatem illum iure fuga consequuntur eum laudantium voluptatum magni, nemo, voluptate ea soluta unde officia? Quis blanditiis corporis nostrum consequuntur.
+            </P>
+        </div>
+        <div class="side" id="s2">
+            <P>Aliquid, a accusamus facere sunt obcaecati quidem nesciunt rerum, porro, similique nisi dolorum!
             </P>
         </div>
         <div class="main">
@@ -28,7 +40,12 @@
         </div>
     </div>
 <script>
+        var scene = 0;
+        const numScenes = 3;
+
         async function init() {
+            var x = document.getElementById("s0")
+            x.style.display = "block";
             margin = 50
             sx = d3.scaleLog().domain([10, 150]).range([0, 200])
             sy = d3.scaleLog().domain([10, 150]).range([200, 0])
@@ -52,6 +69,26 @@
                 .call(d3.axisBottom(sx)
                     .tickValues([10, 20, 50, 100])
                     .tickFormat(d3.format("~s")));
+        }
+        function changeScene(s) {
+            var x = document.getElementById("s"+scene);
+            if (x != null) x.style.display = "none";
+            scene = s
+            x = document.getElementById("s"+scene);
+            if (x != null) x.style.display = "block";
+        }
+        function next(b) {
+            changeScene(scene + 1)
+            b.disabled = scene >= (numScenes - 1);
+            document.getElementById("previousButton").disabled = false;
+            console.log("Scene " + scene + ".");
+            console.log(scene >= (numScenes - 1));
+        }
+        function previous(b) {
+            changeScene(scene - 1)
+            b.disabled = scene <= 0
+            document.getElementById("nextButton").disabled = false;
+            console.log("Scene " + scene + ".");
         }
     </script>
 </body>
